# syncudio-desktop

./: PKGBUILD  README.md  bun.lockb  install.sh  package-lock.json  package.json
scripts/: build.sh
src/: routes.tsx
src-tauri/: Cargo.toml  build.rs
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/libs/: cloud_playlist.rs  constants.rs  database.rs  error.rs  events.rs  file_associations.rs  local_folder.rs  mod.rs  track.rs  utils.rs
src-tauri/src/libs/cloud/: db.rs  dropbox.rs  mod.rs  models.rs
src-tauri/src/libs/database/: cloud.rs  cloud_playlist.rs  core.rs  local_folder.rs  mod.rs  playlist.rs  track.rs
src-tauri/src/libs/tests/: database_tests.rs
src-tauri/src/plugins/: cloud.rs  config.rs  db.old.rs  lastfm.rs  mod.rs
src-tauri/src/plugins/cloud/: commands.rs  mod.rs  worker.rs
src-tauri/src/plugins/cloud/commands/: cleanup.rs  database.rs  fs.rs  metadata.rs  mod.rs  provider.rs  sync.rs  sync_queue.rs
src-tauri/src/plugins/cloud/database/: mod.rs  operations.rs  schema.rs
src-tauri/src/plugins/cloud/database/operations/: cloud_track.rs  cloud_track_map.rs  mod.rs  sync_queue.rs
src-tauri/src/plugins/cloud/models/: cloud_folder.rs  cloud_map.rs  cloud_metadata.rs  cloud_music_folder.rs  cloud_playlist.rs  cloud_track.rs  dto.rs  mod.rs  query_models.rs  sync_queue.rs  unified_track.rs
src-tauri/src/plugins/cloud/providers/: dropbox.rs  mod.rs  traits.rs
src-tauri/src/plugins/db/: core.rs  library.rs  local_folder.rs  mod.rs  playlist.rs  track.rs
src/components/: CloudEvents.tsx  CloudFolderSelect.module.css  CloudFolderSelect.tsx  Footer.tsx  MediaSessionEvents.tsx  PlayerEvents.tsx  Setting.module.css  TrackProgress.tsx  TrackRow.module.css  TracksList.tsx  UnifiedTrackRow.tsx  UnifiedTracksList.tsx
src/hooks/: useCloudQueries.ts  useCloudSyncWorker.ts  useCover.ts  useFilteredUnifiedTracks.ts  useTrackSelection.ts  useTracksContextMenu.ts  useTracksKeyboardNavigation.ts
src/lib/: cloud-database.ts  cloud-metadata.ts  cloud-provider.ts  cloud-sync.ts  cloud.ts  database.ts  icons.ts  lastfm.ts  player.ts  track.ts  utils-track-status.ts  utils-unified-tracks.ts
src/routes/: Root.tsx  cloud.module.css  cloud.tsx  library.tsx  playlist-details.tsx  settings-about.tsx  settings-cloud.tsx  (+6 more)
(+5 files in other folders)
