# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "syncudio"
version = "0.20.5"
description = "A fork of Museeks that enables music syncing across devices. A simple, clean and cross-platform music player"
authors = ["Pierre de la Martinière <pierre.de.la.martiniere@gmail.com>"]
license = "MIT"
repository = "https://github.com/lazykern/syncudio-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = ["codegen"] }

[dependencies]
tauri = { version = "2.2.0", features = [
    "protocol-asset",
    "image-png",
    "devtools",
] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = { version = "2.2.0", features = ["colored"] }
tauri-plugin-notification = "2.2.0"
tauri-plugin-opener = "2.2.3"
tauri-plugin-os = "2.2.0"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-window-state = "2.2.0"

# non-Tauri dependencies
anyhow = "1.0.95"
async-trait = "0.1.77"
base64 = "0.22.1"
chrono = { version = "0.4.31", features = ["serde"] }
dirs = "5.0.1"
dropbox-sdk = { version = "0.19", features = ["default_client", "dbx_files"] }
futures = "0.3.31"
home-config = { version = "0.6.0", features = ["toml"] }
itertools = "0.14.0"
log = "0.4.22"
lofty = "0.22.1"
m3u = "1.0.0"
memoize = "0.4.2"
nosleep = "0.2.1"
ormlite = { version = "0.22.9", features = ["chrono", "default-sqlite"] }
pathdiff = "0.2.3"
rayon = "1.10.0"
rustfm-scrobble = "1.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
strum = { version = "0.26.3", features = ["derive"] }
tokio = "1.43.0"
thiserror = "2.0.11"
ts-rs = { version = "10.1.0", features = ["chrono-impl"] }
uuid = { version = "1.11.1", features = ["v3", "v4", "fast-rng"] }
walkdir = "2.5.0"
mime_guess = "2.0"
toml = "0.8.8"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
